# Bezier_surface

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  report.md  report_zh.md
include/: shader.h
shaders/: bezier.frag  bezier.tesc  bezier.tese  bezier.vert
src/: main.cpp  shader.cpp
